# FilmArchivePlanner

./: .env  .gitlab-ci.yml  compose.yml  e2e.test.env  openapi.yaml
backend-fap/: .gitignore  Dockerfile  docker-compose.dev.yaml  docker-compose.yml  nest-cli.json  package-lock.json  package.json
backend-fap/src/: app.controller.spec.ts  app.controller.ts  app.module.ts  app.service.ts  main.ts
backend-fap/src/config/: config.toml  configuration.ts  files-config.functions.ts
backend-fap/src/contacts/: contacts.controller.spec.ts  contacts.controller.ts  contacts.module.ts  contacts.service.spec.ts  contacts.service.ts
backend-fap/src/database/: database-config.service.spec.ts  database-config.service.ts  database.module.ts
backend-fap/src/directors/: directors.constants.ts  directors.controller.spec.ts  directors.controller.ts  directors.enum.ts  directors.module.ts  directors.service.spec.ts  directors.service.ts
backend-fap/src/events/: event.enum.ts  (+2 more)
backend-fap/test/: app.e2e-spec.ts  jest-e2e.json  movies.e2e-spec.ts  movies.stub.ts  readme.md
frontend-FAP/: angular.json  package-lock.json
frontend-FAP/src/: index.html
frontend-fap/: .eslintrc.json  .gitignore  .prettierrc.json  README.md  angular.json  karma.conf.js  package-lock.json  package.json
frontend-fap/src/: index.html  styles.config.less  styles.less
testing/e2etest/: README.md  pyproject.toml
testing/e2etest/e2etest/: client.py  fake_gen.py  main.py
testing/e2etest/e2etest/files/: __init__.py
testing/e2etest/tests/: __init__.py  test_directors.py  test_files.py  test_movies.py
(+317 files in other folders)
