[tool.poetry]
name = "e2etest"
version = "0.1.0"
description = ""
authors = ["hurbeana"]

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.26.0"
namegenerator = "^1.0.6"
click = "^8.0.3"
black = "^21.11b1"
pytest = "^6.2.5"
paramiko = "^2.8.1"
Faker = "^10.0.0"
enlighten = "^1.10.1"

[tool.poetry.dev-dependencies]

[tool.poetry.scripts]
create = "e2etest.main:cli"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
